Fix the spacing

--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,8 @@ a:hover {
 }
 
 .nav a:focus {
-
+  background-color: #fff;
+  color: #113c00;
 }
 
 .about {
